--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1"
   },
